src/NPortugol/Runtime/Asm/ASMParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 E:\\Git\\NPortugol\\src\\grammar\\ASM.g 2012-05-09 11:02:58

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;

namespace NPortugol.Runtime.Asm
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class ASMParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "CALL", "CNT", "COMMENT", "DCL", "DEC", "DIV", "ESC_SEQ", "EXIT", "EXPONENT", "FLOAT", "HEX_DIGIT", "HOST", "ID", "INC", "INT", "JE", "JG", "JGE", "JL", "JLE", "JMP", "JNE", "MOD", "MOV", "MUL", "NEG", "NEWLINE", "OCTAL_ESC", "POP", "POW", "PUSH", "RET", "SADD", "SDIV", "SMUL", "SSUB", "STRING", "SUB", "UNICODE_ESC", "WS", "','", "'.'", "':'"
	};
	public const int EOF=-1;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int ADD=4;
	public const int CALL=5;
	public const int CNT=6;
	public const int COMMENT=7;
	public const int DCL=8;
	public const int DEC=9;
	public const int DIV=10;
	public const int ESC_SEQ=11;
	public const int EXIT=12;
	public const int EXPONENT=13;
	public const int FLOAT=14;
	public const int HEX_DIGIT=15;
	public const int HOST=16;
	public const int ID=17;
	public const int INC=18;
	public const int INT=19;
	public const int JE=20;
	public const int JG=21;
	public const int JGE=22;
	public const int JL=23;
	public const int JLE=24;
	public const int JMP=25;
	public const int JNE=26;
	public const int MOD=27;
	public const int MOV=28;
	public const int MUL=29;
	public const int NEG=30;
	public const int NEWLINE=31;
	public const int OCTAL_ESC=32;
	public const int POP=33;
	public const int POW=34;
	public const int PUSH=35;
	public const int RET=36;
	public const int SADD=37;
	public const int SDIV=38;
	public const int SMUL=39;
	public const int SSUB=40;
	public const int STRING=41;
	public const int SUB=42;
	public const int UNICODE_ESC=43;
	public const int WS=44;

	public ASMParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public ASMParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}

	public override string[] TokenNames { get { return ASMParser.tokenNames; } }
	public override string GrammarFileName { get { return "E:\\Git\\NPortugol\\src\\grammar\\ASM.g"; } }


		public bool DebugInfo { get; set; }
	        public Dictionary<string, int> _labels = new Dictionary<string, int>();
	        public List<Instruction> _instructions = new List<Instruction>();
	        public FunctionTable _functionTable = new FunctionTable();
	        public int _index = 0;


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_script();
	partial void LeaveRule_script();

	// $ANTLR start "script"
	// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:50:8: public script returns [IList<Instruction> value] : ( func ( instructions )+ )* ;
	[GrammarRule("script")]
	public IList<Instruction> script()
	{
		EnterRule_script();
		EnterRule("script", 1);
		TraceIn("script", 1);
		IList<Instruction> value = default(IList<Instruction>);


		try { DebugEnterRule(GrammarFileName, "script");
		DebugLocation(50, 1);
		try
		{
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:50:49: ( ( func ( instructions )+ )* )
			DebugEnterAlt(1);
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:50:51: ( func ( instructions )+ )*
			{
			DebugLocation(50, 51);
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:50:51: ( func ( instructions )+ )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==ID))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:50:52: func ( instructions )+
					{
					DebugLocation(50, 52);
					PushFollow(Follow._func_in_script358);
					func();
					PopFollow();
					if (state.failed) return value;
					DebugLocation(50, 57);
					// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:50:57: ( instructions )+
					int cnt1=0;
					try { DebugEnterSubRule(1);
					while (true)
					{
						int alt1=2;
						try { DebugEnterDecision(1, false);
						int LA1_0 = input.LA(1);

						if ((LA1_0==ID))
						{
							int LA1_2 = input.LA(2);

							if ((LA1_2==47))
							{
								int LA1_4 = input.LA(3);

								if ((LA1_4==NEWLINE))
								{
									int LA1_5 = input.LA(4);

									if ((EvaluatePredicate(synpred1_ASM_fragment)))
									{
										alt1 = 1;
									}


								}


							}


						}
						else if (((LA1_0>=ADD && LA1_0<=CNT)||(LA1_0>=DCL && LA1_0<=DIV)||LA1_0==EXIT||LA1_0==HOST||LA1_0==INC||(LA1_0>=JE && LA1_0<=NEG)||(LA1_0>=POP && LA1_0<=SSUB)||LA1_0==SUB||LA1_0==46))
						{
							alt1 = 1;
						}


						} finally { DebugExitDecision(1); }
						switch (alt1)
						{
						case 1:
							DebugEnterAlt(1);
							// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:50:57: instructions
							{
							DebugLocation(50, 57);
							PushFollow(Follow._instructions_in_script360);
							instructions();
							PopFollow();
							if (state.failed) return value;

							}
							break;

						default:
							if (cnt1 >= 1)
								goto loop1;

							if (state.backtracking>0) {state.failed=true; return value;}
							EarlyExitException eee1 = new EarlyExitException( 1, input );
							DebugRecognitionException(eee1);
							throw eee1;
						}
						cnt1++;
					}
					loop1:
						;

					} finally { DebugExitSubRule(1); }


					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }

			DebugLocation(50, 72);
			if (state.backtracking == 0)
			{


				            foreach (Instruction inst in _instructions)
				            {
				                if (inst.OpCode.ToString().StartsWith("J"))
				                {
				                   inst.Operands[0].Value = _labels[inst.Operands[0].Value.ToString()];
				                   inst.Operands[0].Type = OperandType.InstructionRef;
				                }
				            }
				            
				            value = _instructions;

			}

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("script", 1);
			LeaveRule("script", 1);
			LeaveRule_script();
		}
		DebugLocation(62, 1);
		} finally { DebugExitRule(GrammarFileName, "script"); }
		return value;

	}
	// $ANTLR end "script"

	partial void EnterRule_func();
	partial void LeaveRule_func();

	// $ANTLR start "func"
	// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:65:1: func : ID ':' NEWLINE ;
	[GrammarRule("func")]
	private void func()
	{
		EnterRule_func();
		EnterRule("func", 2);
		TraceIn("func", 2);
		IToken ID1 = default(IToken);

		try { DebugEnterRule(GrammarFileName, "func");
		DebugLocation(65, 1);
		try
		{
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:65:6: ( ID ':' NEWLINE )
			DebugEnterAlt(1);
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:65:8: ID ':' NEWLINE
			{
			DebugLocation(65, 8);
			ID1=(IToken)Match(input,ID,Follow._ID_in_func373); if (state.failed) return;
			DebugLocation(65, 11);
			Match(input,47,Follow._47_in_func375); if (state.failed) return;
			DebugLocation(65, 15);
			Match(input,NEWLINE,Follow._NEWLINE_in_func377); if (state.failed) return;
			DebugLocation(65, 22);
			if (state.backtracking == 0)
			{

				            var _function = new Function((ID1!=null?ID1.Text:null), _index );
				            _functionTable.Add(_function.Name, _function);
				            
				            if (DebugInfo)
				            {
				              var _instruction = new Instruction(OpCode.EMP, _index);
				              _index++;
				              _instructions.Add(_instruction);            
				            }

			}

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("func", 2);
			LeaveRule("func", 2);
			LeaveRule_func();
		}
		DebugLocation(75, 1);
		} finally { DebugExitRule(GrammarFileName, "func"); }
		return;

	}
	// $ANTLR end "func"

	partial void EnterRule_instructions();
	partial void LeaveRule_instructions();

	// $ANTLR start "instructions"
	// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:77:1: instructions : ( func | inst_no_op | inst_one_op | inst_two_op | inst_n_op | label );
	[GrammarRule("instructions")]
	private void instructions()
	{
		EnterRule_instructions();
		EnterRule("instructions", 3);
		TraceIn("instructions", 3);
		try { DebugEnterRule(GrammarFileName, "instructions");
		DebugLocation(77, 14);
		try
		{
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:78:2: ( func | inst_no_op | inst_one_op | inst_two_op | inst_n_op | label )
			int alt3=6;
			try { DebugEnterDecision(3, false);
			switch (input.LA(1))
			{
			case ID:
				{
				alt3 = 1;
				}
				break;
			case EXIT:
			case RET:
			case SADD:
			case SDIV:
			case SMUL:
			case SSUB:
				{
				alt3 = 2;
				}
				break;
			case CALL:
			case DCL:
			case DEC:
			case INC:
			case JE:
			case JG:
			case JGE:
			case JL:
			case JLE:
			case JMP:
			case JNE:
			case NEG:
			case POP:
			case PUSH:
				{
				alt3 = 3;
				}
				break;
			case ADD:
			case CNT:
			case DIV:
			case MOD:
			case MOV:
			case MUL:
			case POW:
			case SUB:
				{
				alt3 = 4;
				}
				break;
			case HOST:
				{
				alt3 = 5;
				}
				break;
			case 46:
				{
				alt3 = 6;
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return;}
					NoViableAltException nvae = new NoViableAltException("", 3, 0, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:78:4: func
				{
				DebugLocation(78, 4);
				PushFollow(Follow._func_in_instructions388);
				func();
				PopFollow();
				if (state.failed) return;

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:79:10: inst_no_op
				{
				DebugLocation(79, 10);
				PushFollow(Follow._inst_no_op_in_instructions399);
				inst_no_op();
				PopFollow();
				if (state.failed) return;

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:80:10: inst_one_op
				{
				DebugLocation(80, 10);
				PushFollow(Follow._inst_one_op_in_instructions410);
				inst_one_op();
				PopFollow();
				if (state.failed) return;

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:81:10: inst_two_op
				{
				DebugLocation(81, 10);
				PushFollow(Follow._inst_two_op_in_instructions421);
				inst_two_op();
				PopFollow();
				if (state.failed) return;

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:82:10: inst_n_op
				{
				DebugLocation(82, 10);
				PushFollow(Follow._inst_n_op_in_instructions432);
				inst_n_op();
				PopFollow();
				if (state.failed) return;

				}
				break;
			case 6:
				DebugEnterAlt(6);
				// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:83:10: label
				{
				DebugLocation(83, 10);
				PushFollow(Follow._label_in_instructions443);
				label();
				PopFollow();
				if (state.failed) return;

				}
				break;

			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("instructions", 3);
			LeaveRule("instructions", 3);
			LeaveRule_instructions();
		}
		DebugLocation(83, 14);
		} finally { DebugExitRule(GrammarFileName, "instructions"); }
		return;

	}
	// $ANTLR end "instructions"

	partial void EnterRule_label();
	partial void LeaveRule_label();

	// $ANTLR start "label"
	// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:85:1: label : '.' ID NEWLINE ;
	[GrammarRule("label")]
	private void label()
	{
		EnterRule_label();
		EnterRule("label", 4);
		TraceIn("label", 4);
		IToken ID2 = default(IToken);

		try { DebugEnterRule(GrammarFileName, "label");
		DebugLocation(85, 2);
		try
		{
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:85:7: ( '.' ID NEWLINE )
			DebugEnterAlt(1);
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:85:9: '.' ID NEWLINE
			{
			DebugLocation(85, 9);
			Match(input,46,Follow._46_in_label452); if (state.failed) return;
			DebugLocation(85, 13);
			ID2=(IToken)Match(input,ID,Follow._ID_in_label454); if (state.failed) return;
			DebugLocation(85, 16);
			Match(input,NEWLINE,Follow._NEWLINE_in_label456); if (state.failed) return;
			DebugLocation(85, 24);
			if (state.backtracking == 0)
			{
				 
					_labels.Add((ID2!=null?ID2.Text:null), _index);
					if (DebugInfo)
				        {
				            var _instruction = new Instruction(OpCode.EMP, _index);
				            _index++;
				            _instructions.Add(_instruction);	
				        }

			}

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("label", 4);
			LeaveRule("label", 4);
			LeaveRule_label();
		}
		DebugLocation(93, 2);
		} finally { DebugExitRule(GrammarFileName, "label"); }
		return;

	}
	// $ANTLR end "label"

	partial void EnterRule_inst_no_op();
	partial void LeaveRule_inst_no_op();

	// $ANTLR start "inst_no_op"
	// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:95:1: inst_no_op : e= opcode_no_op ( NEWLINE )* ;
	[GrammarRule("inst_no_op")]
	private void inst_no_op()
	{
		EnterRule_inst_no_op();
		EnterRule("inst_no_op", 5);
		TraceIn("inst_no_op", 5);
		OpCode e = default(OpCode);

		try { DebugEnterRule(GrammarFileName, "inst_no_op");
		DebugLocation(95, 1);
		try
		{
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:95:12: (e= opcode_no_op ( NEWLINE )* )
			DebugEnterAlt(1);
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:95:14: e= opcode_no_op ( NEWLINE )*
			{
			DebugLocation(95, 15);
			PushFollow(Follow._opcode_no_op_in_inst_no_op469);
			e=opcode_no_op();
			PopFollow();
			if (state.failed) return;
			DebugLocation(95, 29);
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:95:29: ( NEWLINE )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				int LA4_0 = input.LA(1);

				if ((LA4_0==NEWLINE))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:95:29: NEWLINE
					{
					DebugLocation(95, 29);
					Match(input,NEWLINE,Follow._NEWLINE_in_inst_no_op471); if (state.failed) return;

					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;

			} finally { DebugExitSubRule(4); }

			DebugLocation(95, 37);
			if (state.backtracking == 0)
			{

				            var _instruction = new Instruction(e, _index, new Operand[0]);
				            _index++;
				            _instructions.Add(_instruction);

			}

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("inst_no_op", 5);
			LeaveRule("inst_no_op", 5);
			LeaveRule_inst_no_op();
		}
		DebugLocation(99, 1);
		} finally { DebugExitRule(GrammarFileName, "inst_no_op"); }
		return;

	}
	// $ANTLR end "inst_no_op"

	partial void EnterRule_inst_one_op();
	partial void LeaveRule_inst_one_op();

	// $ANTLR start "inst_one_op"
	// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:101:1: inst_one_op : e= opcode_one_op o= operand NEWLINE ;
	[GrammarRule("inst_one_op")]
	private void inst_one_op()
	{
		EnterRule_inst_one_op();
		EnterRule("inst_one_op", 6);
		TraceIn("inst_one_op", 6);
		OpCode e = default(OpCode);
		Operand o = default(Operand);

		try { DebugEnterRule(GrammarFileName, "inst_one_op");
		DebugLocation(101, 1);
		try
		{
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:101:13: (e= opcode_one_op o= operand NEWLINE )
			DebugEnterAlt(1);
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:101:15: e= opcode_one_op o= operand NEWLINE
			{
			DebugLocation(101, 16);
			PushFollow(Follow._opcode_one_op_in_inst_one_op483);
			e=opcode_one_op();
			PopFollow();
			if (state.failed) return;
			DebugLocation(101, 32);
			PushFollow(Follow._operand_in_inst_one_op487);
			o=operand();
			PopFollow();
			if (state.failed) return;
			DebugLocation(101, 41);
			Match(input,NEWLINE,Follow._NEWLINE_in_inst_one_op489); if (state.failed) return;
			DebugLocation(101, 48);
			if (state.backtracking == 0)
			{

				            var _instruction = new Instruction(e, _index, new []{o});
				            _index++;
				            _instructions.Add(_instruction);

			}

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("inst_one_op", 6);
			LeaveRule("inst_one_op", 6);
			LeaveRule_inst_one_op();
		}
		DebugLocation(105, 1);
		} finally { DebugExitRule(GrammarFileName, "inst_one_op"); }
		return;

	}
	// $ANTLR end "inst_one_op"

	partial void EnterRule_inst_two_op();
	partial void LeaveRule_inst_two_op();

	// $ANTLR start "inst_two_op"
	// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:107:1: inst_two_op : e= opcode_two_op o= operand ',' p= operand NEWLINE ;
	[GrammarRule("inst_two_op")]
	private void inst_two_op()
	{
		EnterRule_inst_two_op();
		EnterRule("inst_two_op", 7);
		TraceIn("inst_two_op", 7);
		OpCode e = default(OpCode);
		Operand o = default(Operand);
		Operand p = default(Operand);

		try { DebugEnterRule(GrammarFileName, "inst_two_op");
		DebugLocation(107, 1);
		try
		{
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:107:13: (e= opcode_two_op o= operand ',' p= operand NEWLINE )
			DebugEnterAlt(1);
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:107:15: e= opcode_two_op o= operand ',' p= operand NEWLINE
			{
			DebugLocation(107, 16);
			PushFollow(Follow._opcode_two_op_in_inst_two_op500);
			e=opcode_two_op();
			PopFollow();
			if (state.failed) return;
			DebugLocation(107, 32);
			PushFollow(Follow._operand_in_inst_two_op504);
			o=operand();
			PopFollow();
			if (state.failed) return;
			DebugLocation(107, 41);
			Match(input,45,Follow._45_in_inst_two_op506); if (state.failed) return;
			DebugLocation(107, 46);
			PushFollow(Follow._operand_in_inst_two_op510);
			p=operand();
			PopFollow();
			if (state.failed) return;
			DebugLocation(107, 55);
			Match(input,NEWLINE,Follow._NEWLINE_in_inst_two_op512); if (state.failed) return;
			DebugLocation(107, 62);
			if (state.backtracking == 0)
			{

				            var _instruction = new Instruction(e, _index, new []{o, p});
				            _index++;
				            _instructions.Add(_instruction);

			}

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("inst_two_op", 7);
			LeaveRule("inst_two_op", 7);
			LeaveRule_inst_two_op();
		}
		DebugLocation(111, 1);
		} finally { DebugExitRule(GrammarFileName, "inst_two_op"); }
		return;

	}
	// $ANTLR end "inst_two_op"

	partial void EnterRule_inst_n_op();
	partial void LeaveRule_inst_n_op();

	// $ANTLR start "inst_n_op"
	// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:113:1: inst_n_op : e= opcode_n_op o+= ID ( ',' o+= ID )* NEWLINE ;
	[GrammarRule("inst_n_op")]
	private void inst_n_op()
	{
		EnterRule_inst_n_op();
		EnterRule("inst_n_op", 8);
		TraceIn("inst_n_op", 8);
		IToken o = default(IToken);
		List<IToken> list_o = null;
		OpCode e = default(OpCode);

		try { DebugEnterRule(GrammarFileName, "inst_n_op");
		DebugLocation(113, 1);
		try
		{
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:113:11: (e= opcode_n_op o+= ID ( ',' o+= ID )* NEWLINE )
			DebugEnterAlt(1);
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:113:13: e= opcode_n_op o+= ID ( ',' o+= ID )* NEWLINE
			{
			DebugLocation(113, 14);
			PushFollow(Follow._opcode_n_op_in_inst_n_op523);
			e=opcode_n_op();
			PopFollow();
			if (state.failed) return;
			DebugLocation(113, 28);
			o=(IToken)Match(input,ID,Follow._ID_in_inst_n_op527); if (state.failed) return;
			if (list_o==null) list_o=new List<IToken>();
			list_o.Add(o);

			DebugLocation(113, 33);
			// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:113:33: ( ',' o+= ID )*
			try { DebugEnterSubRule(5);
			while (true)
			{
				int alt5=2;
				try { DebugEnterDecision(5, false);
				int LA5_0 = input.LA(1);

				if ((LA5_0==45))
				{
					alt5 = 1;
				}


				} finally { DebugExitDecision(5); }
				switch ( alt5 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\Git\\NPortugol\\src\\grammar\\ASM.g:113:34: ',' o+= ID
					{
					DebugLocation(113, 34);
					Match(input,45,Follow._45_in_inst_n_op530); if (state.failed) return;
					DebugLocation(113, 39);
					o=(IToken)Match(input,ID,Follow._ID_in_inst_n_op534); if (state.failed) return;
					if (list_o==null) list_o=new List<IToken>();
					list_o.Add(o);


					}
					break;

				default:
					goto loop5;
				}
			}

			loop5:
				;

			} finally { DebugExitSubRule(5); }

			DebugLocation(113, 46);
			Match(input,NEWLINE,Follow._NEWLINE_in_inst_n_op538); if (state.failed) return;
			DebugLocation(113, 53);
			if (state.backtracking == 0)
			{


					    var plist = new List<Operand>();
								            
				            foreach(var item in list_o)
				            {
				            	plist.Add(new Operand(OperandType.HostObjectRef, item.Text));
				            }
				            
					    var _instruction = new Instruction(e, _index, plist.ToArray());
				            _index++;
				            _instructions.Add(_instruction);                          

			}

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("inst_n_op", 8);
			LeaveRule("inst_n_op", 8);
			LeaveRule_inst_n_op();
		}
		DebugLocation(125, 1);
		} finally { DebugExitRule(GrammarFileName, "inst_n_op"); }
		return;

	}
	// $ANTLR end "inst_n_op"

	partial void EnterRule_opcode_two_op();
	partial void LeaveRule_opcode_two_op();
